2009-04-30  Roland Huss  <roland@consol.de>

	* agent/src/main/java/org/cpan/jmx4perl/AgentServlet.java: Catches
	now exceptions and generates an own, machine readable error
	text. Added keys "status", "error" and "stacktrace" to the JSON
	answer. "status" contains an integer status code similar to
	HTTP/1.1 

2009-04-29  Roland Huss  <roland@consol.de>

	* lib/JMX/Jmx4Perl.pm (request): Added a 'list()' method for
	getting all MBeans

	* scripts/check_jmx4perl: added a '--list' option which lists all
	registered MBeans along with there attributes and operations. A
	'--path' can be used to restrict this list. 

2009-04-27  Roland Huss  <roland@consol.de>

	* scripts/check_jmx4perl: Adopted output and added a --name parameter

	* lib/JMX/Jmx4Perl/Request.pm: Added request and response objects
	and tuned JSON format

2009-04-25  Roland Huss  <roland@consol.de>

	* Initial development release 0.01_01
