@@ -17,6 +17,7 @@ Build.PL
 ChangeLog
 lib/JMX/Jmx4Perl.pm
 lib/JMX/Jmx4Perl/Agent.pm
+lib/JMX/Jmx4Perl/Agent/UserAgent.pm
 lib/JMX/Jmx4Perl/Manual.pod
 lib/JMX/Jmx4Perl/Request.pm
 lib/JMX/Jmx4Perl/Response.pm
