@@ -1,6 +1,6 @@
 ---
 name: jmx4perl
-version: 0.01_03
+version: 0.01_04
 author:
   - Roland Huss (roland@cpan.org)
 abstract: Easy JMX access to Java Applications
@@ -24,11 +24,11 @@ recommends:
 provides:
   JMX::Jmx4Perl:
     file: lib/JMX/Jmx4Perl.pm
-    version: 0.01_03
+    version: 0.01_04
   JMX::Jmx4Perl::Agent:
     file: lib/JMX/Jmx4Perl/Agent.pm
   JMX::Jmx4Perl::Agent::UserAgent:
-    file: lib/JMX/Jmx4Perl/Agent.pm
+    file: lib/JMX/Jmx4Perl/Agent/UserAgent.pm
   JMX::Jmx4Perl::Request:
     file: lib/JMX/Jmx4Perl/Request.pm
   JMX::Jmx4Perl::Response:
